front-end/app.css
body {
  background-color:#e0ebe0de;
  
}

.header-div{
  width: 100%;
  height: 80px;
  background-color: #e0ebe0de;
  text-shadow: rgb(0, 0, 0);
}
.inner-header{
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
  background-color: #ffffffde;
  text-align: center;
}

.logo-container{
  height: 100%;
  display: table;
  float: left;
}
.inner-header:hover{
  background-color: #000000de;
  color: rgb(27, 126, 115);
  text-shadow:  1px 3px  #e0ebe0de;
}
.logo-container h1 {
  height: 100%;
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  font-weight: 200;
  }
  .logo-container h1 span{
    font-weight: 800;
  }
.top-buttons {
margin: 20px;
top: 20px;
}
.top-buttons:hover {
background-color: white;


}
.click-search{
  left: 2px;
}
#modalBtn1{
  background-image: url('accountglass.png');
}

#modal1 {
  display: none;
  position: fixed;
  z-index:100;
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: #dcf5dc; /* Fallback color */
  /* background-color: rgba(0, 0, 0, 0.4); Black w/ opacity */
  z-index: 200;
  text-align: center;
}

#modal2 {
  display: none;
  position: fixed;
  left: 0;
  top: 0;
  bottom: 10px;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background: #fff;
  padding: 20px 15px;
  box-shadow:0 5px 150px rgba(64, 64, 64, 0.5);
  z-index: 100;
  opacity: 1;
  border: none;

}

#modal1 h3:hover {
  text-shadow: 1px 0px #000000;
}

.modal-content {
  
background-color: #c3dac3de;
margin: 5% auto; 
padding: 20px;

width: 70%; /* Could be more or less, depending on screen size */
z-index: 130;
bottom: 10px;
 


}
.close {
  color: hsl(226, 76%, 3%);
  float: right;
  font-size: 28px;
  font-weight: bold;
  z-index: 200;
}



.close:hover,
.close:focus {
  color: rgb(245, 255, 62);
  text-decoration: none;
  cursor: pointer;
}
.close2 {
  color: hsl(226, 76%, 3%);
  float: right;
  font-size: 28px;
  font-weight: bold;
  z-index: 200;
}



.close2:hover,
.close2:focus {
  color: rgb(245, 255, 62);
  text-decoration: none;
  cursor: pointer;
}



.top-buttons {
position: relative;
  
}


#mapid { 
    
    z-index: 50;
    margin: auto;
 
   
  
    padding: 10px;
    
    position: relative;
    
    
    height: 280px; 
    width: 95%;
    margin-bottom: 20px;
  
  
  }

.search{
 position: relative;
  
}
.filter{
 width: fit-content;
}
.filterSection{
  display: flex; 
  justify-content: space-between;
  margin: 30px;
}
.location {
  position: relative;
  margin-bottom: 20px;

  }
#spawn {
    position: relative;
    text-shadow: 1px 0px #2b2b2b;
  
    }
.nearby {
    position: relative;
    bottom: 287px;
    left: 2x;
  }
#help {
  position: relative;
  bottom: -150px;
  
}

.card-img {
    height: 100px;
    position: relative;
      opacity: 50%;
      transition:opacity 0.8s
      
     
  }
  .card-img:hover {
    opacity:100%;
    transition:opacity 0.5s
    }
.res-card {
  cursor: pointer;
  padding-bottom: 10px;
  background: #fff;
  padding: 20px 15px;
  box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
  0 0  0 2px rgb(255,255,255),
  0.3em 0.3em 1em rgba(0,0,0,0.3);
  transition: 0.3s ease-in-out;
  height: 150px;
}
.res-card:hover{
  height: 250px;
}

.nearby{
  position: relative;
  bottom: -100px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
 
  grid-auto-rows: auto;
   
  grid-gap: 1rem;
}


.hidden {
display: none;
}
.help-text {
  cursor: pointer;
  width: fit-content;
}
button{
  padding: 0;
  border: none;
  background: none;
  cursor: pointer;
}
a { color:red;
  cursor: pointer;
 } 

a:visited { text-decoration: none; color:rgb(27, 126, 115)}
a:hover { text-decoration: none; color:rgb(6, 123, 174); }
a:focus { text-decoration: none; color:yellow; }
/* a:hover, a:active { text-decoration: none; color:rgb(145, 160, 90) } */

.modal-img {
height: 300px;

}
.cooking {
  height: 100px;
  right: 40px;
  z-index: 400;
}
.message2 span {
  position: fixed;
  /* background-color: #fff; */
  z-index: 400;
}

.modal-gifs{
  height: 300px;
  display: flex;
}

#banana{
  float: right;
}
.modal-gifs:hover{ 
  animation: rotate 1s linear; 
} 

@keyframes rotate{ 
  0%{ 
      transform: rotate(0deg); 
  } 
  50%{ 
      transform: rotate(180deg); 
  } 
  100%{ 
      transform: rotate(360deg); 
  } 

} 
  

